--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,48 @@
+
+
 <h1>Update Pet</h1>
 
+<form action="/pets/<%=@pet.id%>" method="POST">
+  <label>Name:</label>
+  
+  <br></br>
+  
+  <input type="text" name="pet[name]" value ="<%=@pet.name%>" id ="pet_name">
+  
+  <br></br>
 
+ <!--  <select name="pet[owner_id]">
+
+  	<%if @owner%>
+  		<option value="<%=@owner.id%>"><%=@owner.name%></option>
+	  	<%@owners.each do |owner|%>
+	  		<%if owner.id != @owner.id%>
+	  			<option value="<%=owner.id%>"><%=owner.name%></option>
+	  		<%end%>
+	  	<%end%>
+  	<%else%>
+  		<option value="">Choose one</option>
+  		<%@owners.each do |owner|%>
+	  		<option value="<%=owner.id%>"><%=owner.name%></option>
+  		<%end%>
+  	<%end%>
+
+
+  </select>
+ -->
+
+   <%@owners.each do |owner|%>
+    <input type="checkbox" name="pet[owner_id]" id="<%=owner.id%>" value="<%=owner.id%>" <%='checked' if @pet.owner_id == owner.id %>><%=owner.name%></input>
+  <%end%>
+
+  <br></br>
+
+ 	<label>and/or, create a new owner:</label>
+    <br></br>
+    <label>name:</label>
+      <input  type="text" id ="owner_name" name="owner[name]"></input>
+    <br></br>
+  
+  <input type="submit" value="Update Pet" id = "Update Pet">
+
+</form>
